--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["flit_core >=3.12,<4"]
+build-backend = "flit_core.buildapi"
+
 [project]
 name = "modrinth-manager"
 version = "0.1.0"
@@ -8,6 +12,7 @@ keywords = ["Minecraft", "Modrinth"]
 authors = [
     {name = "Donovan Blake", email = "donovanjblake@gmail.com"},
 ]
+license = "MIT"
 
 dependencies = [
     "requests==2.32.5"
@@ -17,6 +22,9 @@ dependencies = [
 dev = [
     "ruff==0.13.3"
 ]
+
+[project.scripts]
+mcmods = "modrinth_manager:cli.py"
 
 [tool.ruff]
 line-length = 100
