add some mods to the example, improve prints

--- a/examples/mcmods.toml
+++ b/examples/mcmods.toml
@@ -1,3 +1,5 @@
+# Modlist used by yours truly :)
+
 [defaults]
 game_version = "1.21.5"
 loader = "fabric"
@@ -9,3 +11,6 @@ sodium.defaults=true
 lithium.defaults=true
 distanthorizons.defaults=true
 camps_castles_carriages.defaults=true
+modmenu.defaults=true
+stellaris.defaults=true
+fpsdisplay.defaults=true
