--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   ruff-check:
-    name: Ruff Check Format and Lint
+    name: Format and Lint
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v5
