--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,15 @@ jobs:
         pip install .[dev]
         ruff format mcmod_manager --check
         ruff check mcmod_manager
+  integration-tests:
+    name: Integration Tests
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v5
+    - uses: actions/setup-python@v6
+      with:
+        python-version: "3.12"
+    - name: Install and Run
+      run: |
+        pip install .
+        mcmod --config integration_test.toml --download download_test
