--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.48", features = ["derive"] }
-reqwest = { version = "0.12.23" }
+serde_json = {version = "1.0.145"}
+reqwest = { version = "0.12.23", features = ["blocking", "json"] }
+serde = {version="1.0.228", features = ["derive"]}
 toml = { version = "0.9.7" }
