--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "mcmod-manager"
+name = "mcmod"
 version = "0.1.0"
 edition = "2024"
-
+authors = ["Donovan Blake <donovanjblake@gmail.com>"]
+readme = "README.md"
+license = "MIT"
 
 [dependencies]
 clap = { version = "4.5.48", features = ["derive"] }
