--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Cargo Format
       run: cargo fmt --check
     - name: Cargo Clippy
-      run: cargo clippy --check
+      run: cargo clippy -- -Dwarnings
   cargo-build:
     name: Cargo Build
     runs-on: ubuntu-latest
