trying to figure why it's not getting the correct version

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,7 @@ jobs:
       run: cargo build
     - name: Cargo Test
       run: cargo test
+    - name: Integration Tests
+      run: |
+        mkdir ~/.minecraft
+        cargo run -- examples/integration_test.toml -d downloads -i
