--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde_json = {version = "1.0.145"}
 reqwest = { version = "0.12.23", features = ["blocking", "json"] }
 serde = {version="1.0.228", features = ["derive"]}
 toml = { version = "0.9.7" }
+dirs = "6.0.0"
