improve tests, fix optional-projects

--- a/examples/integration_test.toml
+++ b/examples/integration_test.toml
@@ -6,3 +6,7 @@ loader="fabric"
 iris.defaults=true
 blazeandcaves-advancements-pack={defaults=true, loader="datapack"}
 faithful-32x={defaults=true, loader="minecraft"}
+
+[optional-projects]
+camps_castles_carriages.defaults = true
+lithium.defaults = true
