--- a/examples/mcmod.toml
+++ b/examples/mcmod.toml
@@ -7,41 +7,41 @@ loader = "fabric"
 [projects]
 
 # libraries (this section can be removed when dependency resolution is available)
-fabric-api.defaults=true
-cloth-config.defaults=true
-glitchcore.defaults=true
+fabric-api.defaults = true
+cloth-config.defaults = true
+glitchcore.defaults = true
 
 # graphics
-complementary-reimagined.defaults=true
-continuity.defaults=true
-sodium.defaults=true
-iris.defaults=true
-distanthorizons.defaults=true
-faithful-32x={defaults=true, loader="minecraft"}
+complementary-reimagined.defaults = true
+continuity.defaults = true
+sodium.defaults = true
+iris.defaults = true
+distanthorizons.defaults = true
+faithful-32x = { defaults = true, loader = "minecraft" }
 
 # utility
-lithium.defaults=true
-modmenu.defaults=true
-fpsdisplay.defaults=true
+lithium.defaults = true
+modmenu.defaults = true
+fpsdisplay.defaults = true
 
 # generation
-"dungeons+".defaults=true
-dungeons-and-taverns.defaults=true
-hopo-better-ruined-portals.defaults=true
-hopo-better-underwater-ruins.defaults=true
-camps_castles_carriages.defaults=true
-scorched.defaults=true
-stellarity.defaults=true
-tidal-towns.defaults=true
-wabi-sabi-structures=true
+"dungeons+".defaults = true
+dungeons-and-taverns.defaults = true
+hopo-better-ruined-portals.defaults = true
+hopo-better-underwater-ruins.defaults = true
+camps_castles_carriages.defaults = true
+scorched.defaults = true
+stellarity.defaults = true
+tidal-towns.defaults = true
+wabi-sabi-structures.defaults = true
 
 # other
-blazeandcaves-advancements-pack={defaults=true, loader="datapack"}
+blazeandcaves-advancements-pack = { defaults = true, loader = "datapack" }
 
 [optional-projects]
 # saturated.defaults=true
-rebalanced-loot.defaults=true
+rebalanced-loot.defaults = true
 # coven={defaults=true, loader="minecraft"}
-biomesyougo.defaults=true
+biomesyougo.defaults = true
 # fabric-seasons.defaults=true
-serene-seasons.defaults=true
+serene-seasons.defaults = true
