better integration testing

--- a/examples/integration_test.toml
+++ b/examples/integration_test.toml
@@ -2,6 +2,11 @@
 game_version="1.21.5"
 loader="fabric"
 
+[paths]
+data = ".test/data"
+dot_minecraft = ".test/.minecraft"
+temp = ".test/temp"
+
 [projects]
 iris.defaults=true
 blazeandcaves-advancements-pack={defaults=true, loader="datapack"}
