--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ reqwest = { version = "0.12.23", features = ["blocking", "json"] }
 serde = {version="1.0.228", features = ["derive"]}
 toml = { version = "0.9.7" }
 dirs = "6.0.0"
+strum = { version = "0.27.2", features = ["derive"] }
