--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ serde = {version="1.0.228", features = ["derive"]}
 toml = { version = "0.9.7" }
 dirs = "6.0.0"
 strum = { version = "0.27.2", features = ["derive"] }
+chrono = "0.4.42"
